# kafka-sink.rs

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml  redpanda-datagen.json
src/: config.rs  kafka.rs  main.rs
src/sink/: http.rs  mod.rs  postgres.rs
