[package]
name = "kafka-http-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"
env_logger = "0.10.0"
envy = "0.4.2"
futures = "0.3.28"
futures-util = "0.3"
log = "0.4.20"
rdkafka = { version = "0.34", features = ["cmake-build", "ssl", "sasl"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.188", features = ["derive", "serde_derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
